fix background color mix by z-index and fix nvbar position problem

--- a/assets/themes/hong/css/component.css
+++ b/assets/themes/hong/css/component.css
@@ -6,7 +6,7 @@
 	overflow: hidden;
 	background-size: cover;
 	background-position: center center;
-	z-index: -1;
+	z-index: -2;
 	/*filter:alpha(Opacity=30);
 	-moz-opacity:0.3;
 	opacity: 0.3; */
