--- a/assets/themes/hong/css/main.css
+++ b/assets/themes/hong/css/main.css
@@ -33,11 +33,13 @@ a {
 	width: 100%;
 	top:0;
 	position: fixed;
+	position: absolute;
 	right: 0;
 	left: 0;
 	z-index: 100;
 	margin-bottom: 0;
 }
+
 .container-narrow {
   margin: 0 auto;
   /*margin-top: 10px;*/
